fixing LOG_DIR